Assignment/Assignment1/assignment1/assignment1/initial/target/CSELParser.py
# Generated from main/csel/parser/CSEL.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class CSELParser ( Parser ):

    grammarFileName = "CSEL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'Break'", "'Continue'", "'If'", "'Elif'", "'Else'", 
                     "'While'", "'For'", "'Of'", "'In'", "'Function'", "'Let'", 
                     "'True'", "'False'", "'Call'", "'Return'", "'Number'", 
                     "'Boolean'", "'String'", "'JSON'", "'Array'", "'Constant'", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'=='", "'!='", 
                     "'>'", "'>='", "'<'", "'<='", "'!'", "'&&'", "'||'", 
                     "'+.'", "'==.'", "'='", "'&'", "'('", "')'", "'['", 
                     "']'", "'{'", "'}'", "':'", "'.'", "','", "';'" ]

    symbolicNames = [ "<INVALID>", "ID", "NUMLIT", "STRINGLIT", "BREAK", 
                      "CONTINUE", "IF", "ELIF", "ELSE", "WHILE", "FOR", 
                      "OF", "IN", "FUNCTION", "LET", "TRUE", "FALSE", "CALL", 
                      "RETURN", "NUMBER", "BOOLEAN", "STRING", "JSON", "ARRAY", 
                      "CONSTANT", "ADD", "SUB", "MUL", "DIV", "MOD", "EQ", 
                      "NEQ", "GT", "GTE", "LT", "LTE", "NOT", "AND", "OR", 
                      "SADD", "SEQ", "ASSIGN", "REF", "LP", "RP", "LQP", 
                      "RQP", "LB", "RB", "COLON", "DOT", "CM", "SM", "COMMENT", 
                      "WS", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "UNTERMINATED_COMMENT", 
                      "ERROR_CHAR" ]

    RULE_program = 0
    RULE_manydecl = 1
    RULE_varDecl = 2
    RULE_varlist = 3
    RULE_variable = 4
    RULE_var = 5
    RULE_literal = 6
    RULE_arrayLiteral = 7
    RULE_jsonLiteral = 8
    RULE_funcDecl = 9
    RULE_paraList = 10
    RULE_body = 11
    RULE_stmtList = 12
    RULE_otherStmt = 13
    RULE_assignStmt = 14
    RULE_ifStmt = 15
    RULE_forStmt = 16
    RULE_whileStmt = 17
    RULE_breakStmt = 18
    RULE_continueStmt = 19
    RULE_callStmt = 20
    RULE_funcall = 21
    RULE_returnStmt = 22
    RULE_expr = 23
    RULE_logicExpr = 24
    RULE_additiveExpr = 25
    RULE_multiplicateExpr = 26
    RULE_unaryLogicExpr = 27
    RULE_unarySignExpr = 28
    RULE_indexExpr = 29
    RULE_finalExpr = 30
    RULE_callList = 31

    ruleNames =  [ "program", "manydecl", "varDecl", "varlist", "variable", 
                   "var", "literal", "arrayLiteral", "jsonLiteral", "funcDecl", 
                   "paraList", "body", "stmtList", "otherStmt", "assignStmt", 
                   "ifStmt", "forStmt", "whileStmt", "breakStmt", "continueStmt", 
                   "callStmt", "funcall", "returnStmt", "expr", "logicExpr", 
                   "additiveExpr", "multiplicateExpr", "unaryLogicExpr", 
                   "unarySignExpr", "indexExpr", "finalExpr", "callList" ]

    EOF = Token.EOF
    ID=1
    NUMLIT=2
    STRINGLIT=3
    BREAK=4
    CONTINUE=5
    IF=6
    ELIF=7
    ELSE=8
    WHILE=9
    FOR=10
    OF=11
    IN=12
    FUNCTION=13
    LET=14
    TRUE=15
    FALSE=16
    CALL=17
    RETURN=18
    NUMBER=19
    BOOLEAN=20
    STRING=21
    JSON=22
    ARRAY=23
    CONSTANT=24
    ADD=25
    SUB=26
    MUL=27
    DIV=28
    MOD=29
    EQ=30
    NEQ=31
    GT=32
    GTE=33
    LT=34
    LTE=35
    NOT=36
    AND=37
    OR=38
    SADD=39
    SEQ=40
    ASSIGN=41
    REF=42
    LP=43
    RP=44
    LQP=45
    RQP=46
    LB=47
    RB=48
    COLON=49
    DOT=50
    CM=51
    SM=52
    COMMENT=53
    WS=54
    UNCLOSE_STRING=55
    ILLEGAL_ESCAPE=56
    UNTERMINATED_COMMENT=57
    ERROR_CHAR=58

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CSELParser.EOF, 0)

        def manydecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSELParser.ManydeclContext)
            else:
                return self.getTypedRuleContext(CSELParser.ManydeclContext,i)


        def getRuleIndex(self):
            return CSELParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = CSELParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CSELParser.FUNCTION) | (1 << CSELParser.LET) | (1 << CSELParser.CONSTANT))) != 0):
                self.state = 64
                self.manydecl()
                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 70
            self.match(CSELParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ManydeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDecl(self):
            return self.getTypedRuleContext(CSELParser.VarDeclContext,0)


        def funcDecl(self):
            return self.getTypedRuleContext(CSELParser.FuncDeclContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_manydecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitManydecl" ):
                return visitor.visitManydecl(self)
            else:
                return visitor.visitChildren(self)




    def manydecl(self):

        localctx = CSELParser.ManydeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_manydecl)
        try:
            self.state = 74
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CSELParser.LET, CSELParser.CONSTANT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 72
                self.varDecl()
                pass
            elif token in [CSELParser.FUNCTION]:
                self.enterOuterAlt(localctx, 2)
                self.state = 73
                self.funcDecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varlist(self):
            return self.getTypedRuleContext(CSELParser.VarlistContext,0)


        def SM(self):
            return self.getToken(CSELParser.SM, 0)

        def LET(self):
            return self.getToken(CSELParser.LET, 0)

        def CONSTANT(self):
            return self.getToken(CSELParser.CONSTANT, 0)

        def getRuleIndex(self):
            return CSELParser.RULE_varDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDecl" ):
                return visitor.visitVarDecl(self)
            else:
                return visitor.visitChildren(self)




    def varDecl(self):

        localctx = CSELParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_varDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            _la = self._input.LA(1)
            if not(_la==CSELParser.LET or _la==CSELParser.CONSTANT):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 77
            self.varlist()
            self.state = 78
            self.match(CSELParser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self):
            return self.getTypedRuleContext(CSELParser.VariableContext,0)


        def CM(self):
            return self.getToken(CSELParser.CM, 0)

        def varlist(self):
            return self.getTypedRuleContext(CSELParser.VarlistContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_varlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarlist" ):
                return visitor.visitVarlist(self)
            else:
                return visitor.visitChildren(self)




    def varlist(self):

        localctx = CSELParser.VarlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_varlist)
        try:
            self.state = 85
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 80
                self.variable()
                self.state = 81
                self.match(CSELParser.CM)
                self.state = 82
                self.varlist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 84
                self.variable()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self):
            return self.getTypedRuleContext(CSELParser.VarContext,0)


        def COLON(self):
            return self.getToken(CSELParser.COLON, 0)

        def ID(self):
            return self.getToken(CSELParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(CSELParser.ASSIGN, 0)

        def literal(self):
            return self.getTypedRuleContext(CSELParser.LiteralContext,0)


        def expr(self):
            return self.getTypedRuleContext(CSELParser.ExprContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_variable

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable" ):
                return visitor.visitVariable(self)
            else:
                return visitor.visitChildren(self)




    def variable(self):

        localctx = CSELParser.VariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_variable)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.var()
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CSELParser.COLON:
                self.state = 88
                self.match(CSELParser.COLON)
                self.state = 89
                self.match(CSELParser.ID)


            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CSELParser.ASSIGN:
                self.state = 92
                self.match(CSELParser.ASSIGN)
                self.state = 95
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                if la_ == 1:
                    self.state = 93
                    self.literal()
                    pass

                elif la_ == 2:
                    self.state = 94
                    self.expr()
                    pass




        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(CSELParser.ID, 0)

        def LQP(self, i:int=None):
            if i is None:
                return self.getTokens(CSELParser.LQP)
            else:
                return self.getToken(CSELParser.LQP, i)

        def NUMLIT(self, i:int=None):
            if i is None:
                return self.getTokens(CSELParser.NUMLIT)
            else:
                return self.getToken(CSELParser.NUMLIT, i)

        def RQP(self, i:int=None):
            if i is None:
                return self.getTokens(CSELParser.RQP)
            else:
                return self.getToken(CSELParser.RQP, i)

        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(CSELParser.CM)
            else:
                return self.getToken(CSELParser.CM, i)

        def getRuleIndex(self):
            return CSELParser.RULE_var

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar" ):
                return visitor.visitVar(self)
            else:
                return visitor.visitChildren(self)




    def var(self):

        localctx = CSELParser.VarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_var)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(CSELParser.ID)
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CSELParser.LQP:
                self.state = 100
                self.match(CSELParser.LQP)
                self.state = 101
                self.match(CSELParser.NUMLIT)
                self.state = 106
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==CSELParser.CM:
                    self.state = 102
                    self.match(CSELParser.CM)
                    self.state = 103
                    self.match(CSELParser.NUMLIT)
                    self.state = 108
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 109
                self.match(CSELParser.RQP)
                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TRUE(self):
            return self.getToken(CSELParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(CSELParser.FALSE, 0)

        def NUMLIT(self):
            return self.getToken(CSELParser.NUMLIT, 0)

        def STRINGLIT(self):
            return self.getToken(CSELParser.STRINGLIT, 0)

        def arrayLiteral(self):
            return self.getTypedRuleContext(CSELParser.ArrayLiteralContext,0)


        def jsonLiteral(self):
            return self.getTypedRuleContext(CSELParser.JsonLiteralContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_literal

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLiteral" ):
                return visitor.visitLiteral(self)
            else:
                return visitor.visitChildren(self)




    def literal(self):

        localctx = CSELParser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_literal)
        try:
            self.state = 121
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CSELParser.TRUE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 115
                self.match(CSELParser.TRUE)
                pass
            elif token in [CSELParser.FALSE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 116
                self.match(CSELParser.FALSE)
                pass
            elif token in [CSELParser.NUMLIT]:
                self.enterOuterAlt(localctx, 3)
                self.state = 117
                self.match(CSELParser.NUMLIT)
                pass
            elif token in [CSELParser.STRINGLIT]:
                self.enterOuterAlt(localctx, 4)
                self.state = 118
                self.match(CSELParser.STRINGLIT)
                pass
            elif token in [CSELParser.LQP]:
                self.enterOuterAlt(localctx, 5)
                self.state = 119
                self.arrayLiteral()
                pass
            elif token in [CSELParser.LB]:
                self.enterOuterAlt(localctx, 6)
                self.state = 120
                self.jsonLiteral()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayLiteralContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LQP(self):
            return self.getToken(CSELParser.LQP, 0)

        def RQP(self):
            return self.getToken(CSELParser.RQP, 0)

        def literal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSELParser.LiteralContext)
            else:
                return self.getTypedRuleContext(CSELParser.LiteralContext,i)


        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(CSELParser.CM)
            else:
                return self.getToken(CSELParser.CM, i)

        def getRuleIndex(self):
            return CSELParser.RULE_arrayLiteral

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayLiteral" ):
                return visitor.visitArrayLiteral(self)
            else:
                return visitor.visitChildren(self)




    def arrayLiteral(self):

        localctx = CSELParser.ArrayLiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_arrayLiteral)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(CSELParser.LQP)
            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CSELParser.NUMLIT) | (1 << CSELParser.STRINGLIT) | (1 << CSELParser.TRUE) | (1 << CSELParser.FALSE) | (1 << CSELParser.LQP) | (1 << CSELParser.LB))) != 0):
                self.state = 124
                self.literal()
                self.state = 129
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==CSELParser.CM:
                    self.state = 125
                    self.match(CSELParser.CM)
                    self.state = 126
                    self.literal()
                    self.state = 131
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 134
            self.match(CSELParser.RQP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class JsonLiteralContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(CSELParser.LB, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(CSELParser.ID)
            else:
                return self.getToken(CSELParser.ID, i)

        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(CSELParser.COLON)
            else:
                return self.getToken(CSELParser.COLON, i)

        def literal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSELParser.LiteralContext)
            else:
                return self.getTypedRuleContext(CSELParser.LiteralContext,i)


        def RB(self):
            return self.getToken(CSELParser.RB, 0)

        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(CSELParser.CM)
            else:
                return self.getToken(CSELParser.CM, i)

        def getRuleIndex(self):
            return CSELParser.RULE_jsonLiteral

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitJsonLiteral" ):
                return visitor.visitJsonLiteral(self)
            else:
                return visitor.visitChildren(self)




    def jsonLiteral(self):

        localctx = CSELParser.JsonLiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_jsonLiteral)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(CSELParser.LB)
            self.state = 137
            self.match(CSELParser.ID)
            self.state = 138
            self.match(CSELParser.COLON)
            self.state = 139
            self.literal()
            self.state = 146
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CSELParser.CM:
                self.state = 140
                self.match(CSELParser.CM)
                self.state = 141
                self.match(CSELParser.ID)
                self.state = 142
                self.match(CSELParser.COLON)
                self.state = 143
                self.literal()
                self.state = 148
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 149
            self.match(CSELParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(CSELParser.FUNCTION, 0)

        def ID(self):
            return self.getToken(CSELParser.ID, 0)

        def LP(self):
            return self.getToken(CSELParser.LP, 0)

        def RP(self):
            return self.getToken(CSELParser.RP, 0)

        def LB(self):
            return self.getToken(CSELParser.LB, 0)

        def body(self):
            return self.getTypedRuleContext(CSELParser.BodyContext,0)


        def RB(self):
            return self.getToken(CSELParser.RB, 0)

        def paraList(self):
            return self.getTypedRuleContext(CSELParser.ParaListContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_funcDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncDecl" ):
                return visitor.visitFuncDecl(self)
            else:
                return visitor.visitChildren(self)




    def funcDecl(self):

        localctx = CSELParser.FuncDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_funcDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.match(CSELParser.FUNCTION)
            self.state = 152
            self.match(CSELParser.ID)
            self.state = 153
            self.match(CSELParser.LP)
            self.state = 155
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CSELParser.ID:
                self.state = 154
                self.paraList()


            self.state = 157
            self.match(CSELParser.RP)
            self.state = 158
            self.match(CSELParser.LB)
            self.state = 159
            self.body()
            self.state = 160
            self.match(CSELParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParaListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSELParser.VarContext)
            else:
                return self.getTypedRuleContext(CSELParser.VarContext,i)


        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(CSELParser.CM)
            else:
                return self.getToken(CSELParser.CM, i)

        def getRuleIndex(self):
            return CSELParser.RULE_paraList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParaList" ):
                return visitor.visitParaList(self)
            else:
                return visitor.visitChildren(self)




    def paraList(self):

        localctx = CSELParser.ParaListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_paraList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.var()
            self.state = 167
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CSELParser.CM:
                self.state = 163
                self.match(CSELParser.CM)
                self.state = 164
                self.var()
                self.state = 169
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmtList(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSELParser.StmtListContext)
            else:
                return self.getTypedRuleContext(CSELParser.StmtListContext,i)


        def getRuleIndex(self):
            return CSELParser.RULE_body

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBody" ):
                return visitor.visitBody(self)
            else:
                return visitor.visitChildren(self)




    def body(self):

        localctx = CSELParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CSELParser.ID) | (1 << CSELParser.BREAK) | (1 << CSELParser.CONTINUE) | (1 << CSELParser.IF) | (1 << CSELParser.WHILE) | (1 << CSELParser.FOR) | (1 << CSELParser.LET) | (1 << CSELParser.CALL) | (1 << CSELParser.RETURN) | (1 << CSELParser.CONSTANT))) != 0):
                self.state = 170
                self.stmtList()
                self.state = 175
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDecl(self):
            return self.getTypedRuleContext(CSELParser.VarDeclContext,0)


        def otherStmt(self):
            return self.getTypedRuleContext(CSELParser.OtherStmtContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_stmtList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmtList" ):
                return visitor.visitStmtList(self)
            else:
                return visitor.visitChildren(self)




    def stmtList(self):

        localctx = CSELParser.StmtListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_stmtList)
        try:
            self.state = 178
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CSELParser.LET, CSELParser.CONSTANT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 176
                self.varDecl()
                pass
            elif token in [CSELParser.ID, CSELParser.BREAK, CSELParser.CONTINUE, CSELParser.IF, CSELParser.WHILE, CSELParser.FOR, CSELParser.CALL, CSELParser.RETURN]:
                self.enterOuterAlt(localctx, 2)
                self.state = 177
                self.otherStmt()
                pass
            else:
                raise NoViableAltException(self)
